# lab4_agents

./: .env.example  FRAMEWORK.md  README.md  main-planner-tui.py  main-planner.py  main-tui.py  main.py  pyproject.toml
src/lab4_agents/: __init__.py  agent.py  tool.py  tui.py  tui_planner.py
src/lab4_agents/subagents/: __init__.py  calculator_agent.py  planner_agent.py
src/lab4_agents/tools/: __init__.py  calculator.py
