[project]
name = "lab4-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FBarrca", email = "FBarrca@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "ipykernel>=7.1.0",
    "litellm>=1.81.3",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
]

[project.scripts]
lab4-agents = "lab4_agents:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
